--- a/templates/dragon-service.html
+++ b/templates/dragon-service.html
@@ -299,6 +299,8 @@
 
 <script src="../js/first-service/create-dragon.js"></script>
 <script src="../js/first-service/get-all-dragons.js"></script>
+<script src="../js/first-service/get-current-dragon.js"></script>
+
 
 
 </body>
