--- a/templates/dragon-service.html
+++ b/templates/dragon-service.html
@@ -300,6 +300,11 @@
 <script src="../js/first-service/create-dragon.js"></script>
 <script src="../js/first-service/get-all-dragons.js"></script>
 <script src="../js/first-service/get-current-dragon.js"></script>
+<script src="../js/first-service/update-dragon.js"></script>
+<script src="../js/first-service/delete-dragon.js"></script>
+<script src="../js/first-service/search-by-name-dragon.js"></script>
+<script src="../js/first-service/filter-by-killer-dragons.js"></script>
+<script src="../js/first-service/filter-by-character-dragon.js"></script>
 
 
 
