--- a/templates/killers-service.html
+++ b/templates/killers-service.html
@@ -71,6 +71,29 @@
     </div>
 
 
+        <div class="row">
+        <!-- Левая колонка -->
+        <div class="col-md-6">
+            <div class="form-container">
+                <h2 class="text-center">Получение всех команд</h2>
+                <form id="team-get-form">
+                    <button type="button" class="btn btn-primary w-100" id="get-teams-button">Получить все команды</button>
+                </form>
+            </div>
+        </div>
+
+        <!-- Правая колонка -->
+        <div class="col-md-6">
+            <div class="form-container">
+                <h2 class="text-center">Получение всех пещерок</h2>
+                <form id="get-cave-form">
+                    <button type="button" class="btn btn-primary w-100" id="get-caves-button">Получить все пещерки</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
     <div class="row">
         <div class="col-md-6">
             <div class="form-container">
@@ -217,6 +240,9 @@
 <script src="../js/second-service/get_current_killer.js"></script>
 <script src="../js/second-service/delete-killer.js"></script>
 <script src="../js/second-service/get_all_killers.js"></script>
+<script src="../js/second-service/get_all_caves.js"></script>
+<script src="../js/second-service/get_all_teams.js"></script>
+
 
 
 
